Added Sort List To Company Registration Page
See title.

--- a/views/companysignup.ejs
+++ b/views/companysignup.ejs
@@ -106,6 +106,38 @@
                     <div class="form-group">
                         <input type="password" name="confirm-password" id="company-confirm-password" tabindex="7" class="form-control" placeholder="Confirm Password">
                     </div>
+                    <hr style="width: 100%; color: black; height: 1px; background-color:black;" />
+                    <!-- CULTURE SORT START -->
+                    <!-- CULTURE SORT Connected lists -->
+                    <div class="container" style="height: 1500px;">
+                        <div data-force="100" class="layer block" style="top: 0; width: 20%; border-style:solid;">
+                            <div class="layer title">Rank your Culture</div>
+                            <ul id="cul_sort" class="block__list block__list_words">
+                                <li data-id="1">Creative</li>
+                                <li data-id="2">Logical</li>
+                                <li data-id="3">Problem Solver</li>
+                                <li data-id="4">Good Listener</li>
+                                <li data-id="5">Oral Communicator</li>
+                                <li data-id="6">Flexibility in Scheduling</li>
+                                <li data-id="7">People Skills</li>
+                                <li data-id="8">Punctual</li>
+                                <li data-id="9">Accurate</li>
+                                <li data-id="10">Efficient</li>
+                                <li data-id="11">Multi-tasker</li>
+                                <li data-id="12">Analytical</li>
+                                <li data-id="13">Planner</li>
+                                <li data-id="14">Researcher</li>
+                                <li data-id="15">Team Leader</li>
+                                <li data-id="16">Team Member</li>
+                                <li data-id="17">Stamina</li>
+                                <li data-id="18">Like Fast Pace</li>
+                                <li data-id="19">Relationship Builder</li>
+                                <li data-id="20">UX/UI</li>
+                                <li data-id="21">Teacher/Mentor</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <hr style="width: 100%; color: black; height: 1px; background-color:black;" />
                     <div class="form-group">
                         <div class="row">
                             <div class="col-sm-6 col-sm-offset-3">
