--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -116,6 +116,71 @@
                                     <input type="password" name="confirm-password" id="confirm-password" tabindex="8" class="form-control" placeholder="Confirm Password">
                                 </div>
                                 <hr style="width: 100%; color: black; height: 1px; background-color:black;" />
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-xs-6">
+                                            <!-- CULTURE SORT START -->
+                                            <!-- CULTURE SORT Connected lists -->
+                                            <div class="container1" style="height: 1500px;">
+                                                <div data-force="100" class="layer block" style="top: auto; width: auto; border-style:solid;">
+                                                    <div class="layer title">Rank your Culture</div>
+                                                    <ul id="cul_sort" class="block__list block__list_words">
+                                                        <li data-id="1">Creative</li>
+                                                        <li data-id="2">Logical</li>
+                                                        <li data-id="3">Problem Solver</li>
+                                                        <li data-id="4">Good Listener</li>
+                                                        <li data-id="5">Oral Communicator</li>
+                                                        <li data-id="6">Flexibility in Scheduling</li>
+                                                        <li data-id="7">People Skills</li>
+                                                        <li data-id="8">Punctual</li>
+                                                        <li data-id="9">Accurate</li>
+                                                        <li data-id="10">Efficient</li>
+                                                        <li data-id="11">Multi-tasker</li>
+                                                        <li data-id="12">Analytical</li>
+                                                        <li data-id="13">Planner</li>
+                                                        <li data-id="14">Researcher</li>
+                                                        <li data-id="15">Team Leader</li>
+                                                        <li data-id="16">Team Member</li>
+                                                        <li data-id="17">Stamina</li>
+                                                        <li data-id="18">Like Fast Pace</li>
+                                                        <li data-id="19">Relationship Builder</li>
+                                                        <li data-id="20">UX/UI</li>
+                                                        <li data-id="21">Teacher/Mentor</li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <div class="container1" style="height: 1500px;">
+                                                <div data-force="100" class="layer block" style="top: auto; width: auto; border-style:solid;">
+                                                    <div class="layer title">Rank Your Skills</div>
+                                                    <ul id="skill_sort" class="block__list block__list_words">
+                                                        <li data-id="1">Project Management</li>
+                                                        <li data-id="2">Tech Writing</li>
+                                                        <li data-id="3">Programming Scripts</li>
+                                                        <li data-id="4">Programming Java</li>
+                                                        <li data-id="5">Programming C/C++/C# etc</li>
+                                                        <li data-id="6">Programming Python, Ruby, Web2Py</li>
+                                                        <li data-id="7">Database</li>
+                                                        <li data-id="8">UI/UX</li>
+                                                        <li data-id="9">Algorithms</li>
+                                                        <li data-id="10">Debugging</li>
+                                                        <li data-id="11">System Design</li>
+                                                        <li data-id="12">Business Analysis</li>
+                                                        <li data-id="13">Web Development</li>
+                                                        <li data-id="14">Mobile Development</li>
+                                                        <li data-id="15">OS</li>
+                                                        <li data-id="16">System Architecture</li>
+                                                        <li data-id="17">System Integration</li>
+                                                        <li data-id="18">AI</li>
+                                                        <li data-id="19">Game Programming</li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <hr style="width: 100%; color: black; height: 1px; background-color:black;" />
                                 <div class="form-group">
                                     <div class="row">
                                         <div class="col-sm-6 col-sm-offset-3">
@@ -129,70 +194,7 @@
         </div>
 </div>
 
-<div class="container">
-    <div class="row">
-        <div class="col-xs-6">
-            <!-- CULTURE SORT START -->
-            <!-- CULTURE SORT Connected lists -->
-            <div class="container1" style="height: 1500px;">
-                <div data-force="100" class="layer block" style="top: auto; width: auto; border-style:solid;">
-                    <div class="layer title">Rank your Culture</div>
-                    <ul id="cul_sort" class="block__list block__list_words">
-                        <li data-id="1">Creative</li>
-                        <li data-id="2">Logical</li>
-                        <li data-id="3">Problem Solver</li>
-                        <li data-id="4">Good Listener</li>
-                        <li data-id="5">Oral Communicator</li>
-                        <li data-id="6">Flexibility in Scheduling</li>
-                        <li data-id="7">People Skills</li>
-                        <li data-id="8">Punctual</li>
-                        <li data-id="9">Accurate</li>
-                        <li data-id="10">Efficient</li>
-                        <li data-id="11">Multi-tasker</li>
-                        <li data-id="12">Analytical</li>
-                        <li data-id="13">Planner</li>
-                        <li data-id="14">Researcher</li>
-                        <li data-id="15">Team Leader</li>
-                        <li data-id="16">Team Member</li>
-                        <li data-id="17">Stamina</li>
-                        <li data-id="18">Like Fast Pace</li>
-                        <li data-id="19">Relationship Builder</li>
-                        <li data-id="20">UX/UI</li>
-                        <li data-id="21">Teacher/Mentor</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="col-xs-6">
-            <div class="container1" style="height: 1000px;">
-                <div data-force="100" class="layer block" style="top: auto; width: auto; border-style:solid;">
-                    <div class="layer title">Rank Your Skills</div>
-                    <ul id="skill_sort" class="block__list block__list_words">
-                        <li data-id="1">Project Management</li>
-                        <li data-id="2">Tech Writing</li>
-                        <li data-id="3">Programming Scripts</li>
-                        <li data-id="4">Programming Java</li>
-                        <li data-id="5">Programming C/C++/C# etc</li>
-                        <li data-id="6">Programming Python, Ruby, Web2Py</li>
-                        <li data-id="7">Database</li>
-                        <li data-id="8">UI/UX</li>
-                        <li data-id="9">Algorithms</li>
-                        <li data-id="10">Debugging</li>
-                        <li data-id="11">System Design</li>
-                        <li data-id="12">Business Analysis</li>
-                        <li data-id="13">Web Development</li>
-                        <li data-id="14">Mobile Development</li>
-                        <li data-id="15">OS</li>
-                        <li data-id="16">System Architecture</li>
-                        <li data-id="17">System Integration</li>
-                        <li data-id="18">AI</li>
-                        <li data-id="19">Game Programming</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
 
 
 
