Revert "Updated profiles"
This reverts commit 4daea686566afd42b655a9b9c5eacfcc6825efab.

--- a/views/companyprofile.ejs
+++ b/views/companyprofile.ejs
@@ -74,6 +74,8 @@
                             <div class="col-xs-12 col-sm-8">
                                 <h2><%=user.local.companyname%> </h2>
                                 <p><strong>Address: </strong> <%=user.local.company.address%> </p>
+                                <p><strong>City: </strong> <%=user.local.company.city%> </p>
+                                <p><strong>State: </strong> <%=user.local.company.state%> </p>
                                 <p><strong>Email: </strong> <%=user.local.company.email%> </p>
                                 <p><strong>Webpage: </strong> <%=user.local.company.webpage%> </p>
                                 <p><strong>Culture: </strong>
