--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -62,6 +62,7 @@
                             <div class="col-xs-12 col-sm-8">
                                 <h2><%=user.local.candidate.firstname%> <%=user.local.candidate.lastname%></h2>
                                 <p><strong>School: </strong> <%=user.local.candidate.school%> </p>
+                                <p><strong>Hobbies: </strong> Read, out with friends, listen to music, draw and learn new things. </p>
                                 <p><strong>Top Skills: </strong>
                                     <span class="tags">Web Dev</span>
                                     <span class="tags">UI/UX</span>
